fixing intro word spacing, spacing btwn intro and about, font size for intro

--- a/src/components/home/Intro.css
+++ b/src/components/home/Intro.css
@@ -1,9 +1,11 @@
 .center {
   width: 100%;
-  height: 100vh;
+  height: 75vh;
  margin-top: 15%;
 display: flex;
   justify-content: center;
+  word-spacing: 10px;
+
 }
 
 .intro-p {
@@ -15,7 +17,7 @@ display: flex;
 }
 
 .char {
-  font-size: 5vmin;
+  font-size: 4.5vmin;
   height: 40px;
   animation: an 1s ease-out 1 both;
   display: inline-block;
